kubernetes/apps/otel-demo/otel-demo/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo
  namespace: otel-demo
  annotations:
    hajimari.io/appName: "ot-demo"
    hajimari.io/icon: simple-icons:eclipsemosquitto
    hajimari.io/group: Intranet Apps
spec:
  rules:
  - host: &host demo.intra.falhalla.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-demo-frontendproxy
            port:
              number: 8080
  tls:
  - hosts:
      - *host
